--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,5 @@
-@import "tailwindcss";
-import "/global.css";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import "./global.css";
