--- a/src/index.css
+++ b/src/index.css
@@ -24,10 +24,10 @@ a:hover {
 
 body {
   margin: 0;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
   box-sizing: border-box;
+  width: 100%; /* Add this */
 }
 
 h1 {
